# sparql-kgqa

./: Makefile  README.md  pyproject.toml
baselines/: gpt.py  gpt_indices.py  gpt_sparql_only.py  langchain_sparql.py  requirements.txt
configs/: query_plan_prompt.txt  server.yaml  system_message.txt  train-lora.yaml  train-simplequestions-lora.yaml  train-simplequestions.yaml  train.yaml  wikidata-simple-lora.yaml  wikidata-simple.yaml
configs/chat_templates/: default.yaml  gpt2.yaml  phi-3.yaml
configs/data/: cwq.yaml  grail-qa.yaml  lcquad2.yaml  pretraining.yaml  wikidata-finetuning.yaml  wikidata-pretraining.yaml  wikidata-simple.yaml  wikidata.yaml  wqsp.yaml  wwq.yaml
configs/grammars/wikidata/: sparql.l
configs/models/: llama-2.yaml  llama-3.yaml  mistral.yaml  phi-3.yaml
configs/peft/: gpt2-lora.yaml  phi-3-lora.yaml  qwen2-lora.yaml
configs/tokenizers/: phi-3-eos.yaml
scripts/: build_nn_index.py  build_qgram_index.py  build_search_index.py  build_sim_index.py  check_sequence_lengths.py  evaluate.py  evaluate_all.sh  examples_raw.jsonl  export_experiment.py  extract_sparql.py  generate_queries_from_sparql.py  prepare_data.py  prepare_data2.py  prepare_examples.py  prepare_openhermes.py  prepare_qgram_index.py  prepare_search_index.py  prepare_wikidata_query_logs.py
src/sparql_kgqa/: __init__.py  model.py  nn_index.py  sim_index.py
src/sparql_kgqa/api/: __init__.py  cli.py  cli2.py  generator.py  generator2.py  server.py  server2.py  train.py  utils.py
src/sparql_kgqa/sparql/: metrics.py  utils.py  utils2.py
(+25 files in other folders)
